--- a/popup.html
+++ b/popup.html
@@ -176,7 +176,7 @@ LinkedIn Posts Data:
 {data}</textarea>
       <button id="findLeads" style="margin-top: 10px; background: linear-gradient(135deg, #ff6b6b 0%, #ee5a24 100%) !important;">Find Leads</button>
       <button id="testOllama" style="margin-top: 5px; background: linear-gradient(135deg, #6b6bff 0%, #2424ee 100%) !important;">Test Ollama Connection</button>
-      <div style="font-size: 11px; color: #666; margin-top: 5px; text-align: center;">⚠️ Keep popup open during model generation</div>
+      <div style="font-size: 11px; color: #666; margin-top: 5px; text-align: center;">WARNING: Keep popup open during model generation</div>
     </div>
     
     <div class="scroll-controls">
