--- a/popup.html
+++ b/popup.html
@@ -222,6 +222,8 @@ OUTPUT FORMAT - RETURN ONLY THIS JSON STRUCTURE:
     "post_url": "exact post URL from post",
     "linkedin_profile_url": "exact profile URL from post", 
     "age": "exact age from post",
+    "post_date": "exact post date (YYYY-MM-DD)",
+    "exact_date": true/false (whether date was exact or calculated),
     "post_content": "exact post content from post",
     "hiring_reason": "keyword found: [specific keyword]"
   }
