--- a/popup.html
+++ b/popup.html
@@ -1,227 +1,315 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>S4S LinkedIn Tool</title>
-  <style>
-    body { 
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
-      margin: 0; 
-      padding: 0;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: #333;
-      min-width: 400px;
-      min-height: 500px;
-    }
-    .header {
-      background: rgba(255, 255, 255, 0.95);
-      padding: 15px;
-      text-align: center;
-      border-bottom: 2px solid #667eea;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
-    }
-    .header h1 {
-      margin: 0;
-      font-size: 18px;
-      font-weight: 600;
-      color: #667eea;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-    }
-    .section-divider {
-      border-bottom: 1px solid #e0e0e0;
-      margin: 18px 0 12px 0;
-    }
-    .content {
-      padding: 15px;
-      background: white;
-      height: calc(100vh - 60px);
-      overflow-y: auto;
-    }
-    .controls, .scroll-controls {
-      margin-bottom: 15px;
-    }
-    .scroll-controls {
-      display: flex;
-      gap: 10px;
-      margin: 0 0 15px 0;
-    }
-    .scroll-controls button {
-      flex: 1;
-      margin: 0;
-    }
-    button {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
-      color: white;
-      border: none;
-      padding: 10px 15px;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 14px;
-      font-weight: 500;
-      margin: 5px 0;
-      width: 100%;
-      transition: all 0.3s ease;
-    }
-    button:disabled {
-      background: #bdbdbd !important;
-      cursor: not-allowed;
-    }
-    button:hover:enabled {
-      transform: translateY(-2px);
-      box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);
-    }
-    .start-btn {
-      background: linear-gradient(135deg, #28a745 0%, #20c997 100%) !important;
-    }
-    .start-btn:hover:enabled {
-      background: linear-gradient(135deg, #218838 0%, #1ea085 100%) !important;
-    }
-    .stop-btn {
-      background: linear-gradient(135deg, #dc3545 0%, #c82333 100%) !important;
-    }
-    .stop-btn:hover:enabled {
-      background: linear-gradient(135deg, #c82333 0%, #bd2130 100%) !important;
-    }
-    .stop-btn:disabled {
-      background: #6c757d !important;
-      cursor: not-allowed;
-      transform: none;
-    }
-    .stop-analysis-btn {
-      background: linear-gradient(135deg, #fd7e14 0%, #e55a00 100%) !important;
-    }
-    .stop-analysis-btn:hover:enabled {
-      background: linear-gradient(135deg, #e55a00 0%, #cc4a00 100%) !important;
-    }
-    #status {
-      background: #e3f2fd;
-      padding: 10px;
-      border-radius: 5px;
-      margin: 10px 0;
-      font-size: 12px;
-      color: #1976d2;
-      border-left: 4px solid #2196f3;
-    }
+  <head>
+    <title>S4S LinkedIn Tool</title>
+    <style>
+      body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        margin: 0;
+        padding: 0;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        color: #333;
+        min-width: 400px;
+        min-height: 500px;
+      }
+      .header {
+        background: rgba(255, 255, 255, 0.95);
+        padding: 15px;
+        text-align: center;
+        border-bottom: 2px solid #667eea;
+        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+      }
+      .header h1 {
+        margin: 0;
+        font-size: 18px;
+        font-weight: 600;
+        color: #667eea;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+      }
+      .section-divider {
+        border-bottom: 1px solid #e0e0e0;
+        margin: 18px 0 12px 0;
+      }
+      .content {
+        padding: 15px;
+        background: white;
+        height: calc(100vh - 60px);
+        overflow-y: auto;
+      }
+      .controls,
+      .scroll-controls {
+        margin-bottom: 15px;
+      }
+      .scroll-controls {
+        display: flex;
+        gap: 10px;
+        margin: 0 0 15px 0;
+      }
+      .scroll-controls button {
+        flex: 1;
+        margin: 0;
+      }
+      button {
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        color: white;
+        border: none;
+        padding: 10px 15px;
+        border-radius: 5px;
+        cursor: pointer;
+        font-size: 14px;
+        font-weight: 500;
+        margin: 5px 0;
+        width: 100%;
+        transition: all 0.3s ease;
+      }
+      button:disabled {
+        background: #bdbdbd !important;
+        cursor: not-allowed;
+      }
+      button:hover:enabled {
+        transform: translateY(-2px);
+        box-shadow: 0 4px 15px rgba(102, 126, 234, 0.4);
+      }
+      .start-btn {
+        background: linear-gradient(
+          135deg,
+          #28a745 0%,
+          #20c997 100%
+        ) !important;
+      }
+      .start-btn:hover:enabled {
+        background: linear-gradient(
+          135deg,
+          #218838 0%,
+          #1ea085 100%
+        ) !important;
+      }
+      .stop-btn {
+        background: linear-gradient(
+          135deg,
+          #dc3545 0%,
+          #c82333 100%
+        ) !important;
+      }
+      .stop-btn:hover:enabled {
+        background: linear-gradient(
+          135deg,
+          #c82333 0%,
+          #bd2130 100%
+        ) !important;
+      }
+      .stop-btn:disabled {
+        background: #6c757d !important;
+        cursor: not-allowed;
+        transform: none;
+      }
+      .stop-analysis-btn {
+        background: linear-gradient(
+          135deg,
+          #fd7e14 0%,
+          #e55a00 100%
+        ) !important;
+      }
+      .stop-analysis-btn:hover:enabled {
+        background: linear-gradient(
+          135deg,
+          #e55a00 0%,
+          #cc4a00 100%
+        ) !important;
+      }
+      #status {
+        background: #e3f2fd;
+        padding: 10px;
+        border-radius: 5px;
+        margin: 10px 0;
+        font-size: 12px;
+        color: #1976d2;
+        border-left: 4px solid #2196f3;
+      }
 
-    .download-btn {
-      background: linear-gradient(135deg, #28a745 0%, #20c997 100%) !important;
-      margin-top: 10px;
-    }
-    .download-btn:hover:enabled {
-      background: linear-gradient(135deg, #218838 0%, #1ea085 100%) !important;
-    }
-    #download-section {
-      text-align: center;
-      margin: 15px 0;
-    }
-    .prompt-row {
-      display: flex;
-      align-items: flex-start;
-      gap: 8px;
-      margin-bottom: 10px;
-    }
-    .prompt-row textarea {
-      flex: 1;
-    }
-    .save-prompt-btn {
-      width: auto;
-      min-width: 100px;
-      margin: 0;
-      padding: 8px 12px;
-      font-size: 13px;
-      background: #ffb300;
-      color: #333;
-      font-weight: 600;
-      border-radius: 4px;
-      border: none;
-      cursor: pointer;
-      transition: background 0.2s;
-    }
-    .save-prompt-btn:disabled {
-      background: #ffe082;
-      color: #888;
-      cursor: not-allowed;
-    }
-    .save-prompt-btn:hover:enabled {
-      background: #ffa000;
-    }
-    .prompt-textarea {
-      width: 100%;
-      min-height: 300px;
-      padding: 10px;
-      border: 1px solid #ddd;
-      border-radius: 4px;
-      font-family: 'Courier New', monospace;
-      font-size: 12px;
-      line-height: 1.4;
-      resize: vertical;
-      background: #f8f9fa;
-      margin-bottom: 10px;
-    }
-    .prompt-textarea:focus {
-      outline: none;
-      border-color: #667eea;
-      box-shadow: 0 0 0 2px rgba(102, 126, 234, 0.2);
-    }
-    .prompt-controls {
-      display: flex;
-      gap: 10px;
-      margin-bottom: 10px;
-    }
-    .prompt-controls button {
-      flex: 1;
-      padding: 8px 12px;
-      font-size: 13px;
-      margin: 0;
-    }
-    .reset-btn {
-      background: linear-gradient(135deg, #6c757d 0%, #5a6268 100%) !important;
-    }
-    .reset-btn:hover:enabled {
-      background: linear-gradient(135deg, #5a6268 0%, #545b62 100%) !important;
-    }
-  </style>
-</head>
-<body>
-  <div class="header">
-    <h1>S4S LinkedIn Tool</h1>
-  </div>
-  <div class="content">
-    <div class="scroll-controls">
-      <button id="startScroll" class="start-btn">Start Scrolling & Analysis</button>
-      <button id="stopScroll" class="stop-btn" disabled>Stop Scrolling</button>
-      <button id="stopAnalysis" class="stop-analysis-btn" disabled>Stop Analysis Only</button>
+      .download-btn {
+        background: linear-gradient(
+          135deg,
+          #28a745 0%,
+          #20c997 100%
+        ) !important;
+        margin-top: 10px;
+      }
+      .download-btn:hover:enabled {
+        background: linear-gradient(
+          135deg,
+          #218838 0%,
+          #1ea085 100%
+        ) !important;
+      }
+      #download-section {
+        text-align: center;
+        margin: 15px 0;
+      }
+      .prompt-row {
+        display: flex;
+        align-items: flex-start;
+        gap: 8px;
+        margin-bottom: 10px;
+      }
+      .prompt-row textarea {
+        flex: 1;
+      }
+      .save-prompt-btn {
+        width: auto;
+        min-width: 100px;
+        margin: 0;
+        padding: 8px 12px;
+        font-size: 13px;
+        background: #ffb300;
+        color: #333;
+        font-weight: 600;
+        border-radius: 4px;
+        border: none;
+        cursor: pointer;
+        transition: background 0.2s;
+      }
+      .save-prompt-btn:disabled {
+        background: #ffe082;
+        color: #888;
+        cursor: not-allowed;
+      }
+      .save-prompt-btn:hover:enabled {
+        background: #ffa000;
+      }
+      .prompt-textarea {
+        width: 100%;
+        min-height: 300px;
+        padding: 10px;
+        border: 1px solid #ddd;
+        border-radius: 4px;
+        font-family: "Courier New", monospace;
+        font-size: 12px;
+        line-height: 1.4;
+        resize: vertical;
+        background: #f8f9fa;
+        margin-bottom: 10px;
+      }
+      .prompt-textarea:focus {
+        outline: none;
+        border-color: #667eea;
+        box-shadow: 0 0 0 2px rgba(102, 126, 234, 0.2);
+      }
+      .prompt-controls {
+        display: flex;
+        gap: 10px;
+        margin-bottom: 10px;
+      }
+      .prompt-controls button {
+        flex: 1;
+        padding: 8px 12px;
+        font-size: 13px;
+        margin: 0;
+      }
+      .reset-btn {
+        background: linear-gradient(
+          135deg,
+          #6c757d 0%,
+          #5a6268 100%
+        ) !important;
+      }
+      .reset-btn:hover:enabled {
+        background: linear-gradient(
+          135deg,
+          #5a6268 0%,
+          #545b62 100%
+        ) !important;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="header">
+      <h1>S4S LinkedIn Tool</h1>
     </div>
-    
-    <!-- New: Live Metrics Section -->
-    <div id="metrics" style="display: none; background: #f8f9fa; border: 1px solid #e9ecef; border-radius: 8px; padding: 15px; margin: 15px 0; font-family: 'Courier New', monospace; font-size: 12px;">
-      <div style="font-weight: bold; margin-bottom: 10px; color: #495057;">Live Metrics</div>
-      <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px;">
-        <div>
-          <span style="color: #6c757d;">Posts Found:</span>
-          <span id="postsFound" style="font-weight: bold; color: #007bff;">0</span>
+    <div class="content">
+      <div class="scroll-controls">
+        <button id="startScroll" class="start-btn">
+          Start Scrolling & Analysis
+        </button>
+        <button id="stopScroll" class="stop-btn" disabled>
+          Stop Scrolling
+        </button>
+        <button id="stopAnalysis" class="stop-analysis-btn" disabled>
+          Stop Analysis
+        </button>
+      </div>
+
+      <!-- New: Live Metrics Section -->
+      <div
+        id="metrics"
+        style="
+          display: none;
+          background: #f8f9fa;
+          border: 1px solid #e9ecef;
+          border-radius: 8px;
+          padding: 15px;
+          margin: 15px 0;
+          font-family: 'Courier New', monospace;
+          font-size: 12px;
+        "
+      >
+        <div style="font-weight: bold; margin-bottom: 10px; color: #495057">
+          Live Metrics
         </div>
-        <div>
-          <span style="color: #6c757d;">Posts Analyzed:</span>
-          <span id="postsAnalyzed" style="font-weight: bold; color: #28a745;">0</span>
-        </div>
-        <div>
-          <span style="color: #6c757d;">Leads Found:</span>
-          <span id="leadsFound" style="font-weight: bold; color: #dc3545;">0</span>
-        </div>
-        <div>
-          <span style="color: #6c757d;">Analysis Status:</span>
-          <span id="analysisStatus" style="font-weight: bold; color: #ffc107;">Idle</span>
+        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 10px">
+          <div>
+            <span style="color: #6c757d">Posts Found:</span>
+            <span id="postsFound" style="font-weight: bold; color: #007bff"
+              >0</span
+            >
+          </div>
+          <div>
+            <span style="color: #6c757d">Posts Analyzed:</span>
+            <span id="postsAnalyzed" style="font-weight: bold; color: #28a745"
+              >0</span
+            >
+          </div>
+          <div>
+            <span style="color: #6c757d">Leads Found:</span>
+            <span id="leadsFound" style="font-weight: bold; color: #dc3545"
+              >0</span
+            >
+          </div>
+          <div>
+            <span style="color: #6c757d">Analysis Status:</span>
+            <span id="analysisStatus" style="font-weight: bold; color: #ffc107"
+              >Idle</span
+            >
+          </div>
         </div>
       </div>
-    </div>
-    
-    <div class="section-divider"></div>
-    <div class="controls" id="controls"></div>
-    <div class="section-divider"></div>
-    <div class="lead-finder" style="margin: 15px 0;">
-      <label style="display: block; margin-bottom: 5px; font-weight: 500; color: #333;">Hiring Classifier Prompt:</label>
-      <pre style="white-space: pre-wrap; background: #f8f9fa; border: 1px solid #e9ecef; border-radius: 4px; padding: 10px; font-size: 12px; margin: 0;">SYSTEM: You are a hiring post classifier. Return ONLY "YES" or "NO".
+
+      <div class="section-divider"></div>
+      <div class="controls" id="controls"></div>
+      <div class="section-divider"></div>
+      <div class="lead-finder" style="margin: 15px 0">
+        <label
+          style="
+            display: block;
+            margin-bottom: 5px;
+            font-weight: 500;
+            color: #333;
+          "
+          >Hiring Classifier Prompt:</label
+        >
+        <pre
+          style="
+            white-space: pre-wrap;
+            background: #f8f9fa;
+            border: 1px solid #e9ecef;
+            border-radius: 4px;
+            padding: 10px;
+            font-size: 12px;
+            margin: 0;
+          "
+        >
+SYSTEM: You are a hiring post classifier. Return ONLY "YES" or "NO".
 
 TASK: Determine if this LinkedIn post is from someone actively HIRING others (not seeking employment themselves).
 
@@ -257,16 +345,20 @@ CASUAL MENTIONS (return "NO"):
 POST CONTENT: [post content]
 POST HEADLINE: [post headline]
 
-RESPONSE: Return ONLY "YES" or "NO"</pre>
+RESPONSE: Return ONLY "YES" or "NO"</pre
+        >
+      </div>
+      <div class="section-divider"></div>
+      <div id="results"></div>
+      <div
+        id="download-section"
+        style="text-align: center; margin: 15px 0"
+      ></div>
     </div>
-    <div class="section-divider"></div>
-    <div id="results"></div>
-    <div id="download-section" style="text-align: center; margin: 15px 0;"></div>
-  </div>
-  <script src="exportExcel.js"></script>
-  <script src="extractButton.js"></script>
-  <script src="findLeadsButton.js"></script>
-  <script src="downloadCSVButton.js"></script>
-  <script src="popup.js"></script>
-</body>
+    <script src="exportExcel.js"></script>
+    <script src="extractButton.js"></script>
+    <script src="findLeadsButton.js"></script>
+    <script src="downloadCSVButton.js"></script>
+    <script src="popup.js"></script>
+  </body>
 </html>
