--- a/popup.html
+++ b/popup.html
@@ -370,6 +370,43 @@
         </div>
       </div>
 
+      <!-- Date Filter Section -->
+      <div class="date-filter" style="margin: 15px 0">
+        <label
+          style="
+            display: block;
+            margin-bottom: 5px;
+            font-weight: 500;
+            color: #333;
+          "
+          >Filter Posts by Date:</label
+        >
+        <div style="display: flex; gap: 10px; align-items: center; margin-bottom: 10px;">
+          <input
+            type="number"
+            id="dateFilterDays"
+            placeholder="2"
+            min="1"
+            max="365"
+            style="
+              width: 80px;
+              padding: 8px;
+              border: 1px solid #ddd;
+              border-radius: 4px;
+              font-size: 14px;
+              text-align: center;
+            "
+          >
+          <span style="color: #666; font-size: 14px;">days ago</span>
+          <button id="clearDateFilter" class="reset-btn" style="width: auto; margin: 0; padding: 8px 12px; font-size: 13px;">
+            Clear Filter
+          </button>
+        </div>
+        <div style="font-size: 12px; color: #666; margin-top: 5px;">
+          Leave empty to include all posts. Enter a number to only include posts from the last N days.
+        </div>
+      </div>
+
       <div class="lead-finder" style="margin: 15px 0">
         <label
           style="
