--- a/popup.html
+++ b/popup.html
@@ -349,6 +349,77 @@
         font-size: 13px;
         margin: 0;
       }
+      
+      /* Speed Control Styles */
+      .speed-control {
+        margin: 15px 0;
+        padding: 15px;
+        background: rgba(102, 126, 234, 0.05);
+        border-radius: 8px;
+        border: 1px solid rgba(102, 126, 234, 0.1);
+      }
+      .speed-label {
+        display: block;
+        font-weight: 600;
+        color: #667eea;
+        margin-bottom: 10px;
+        font-size: 14px;
+      }
+      .speed-container {
+        position: relative;
+        margin-bottom: 8px;
+      }
+      .speed-slider {
+        width: 100%;
+        height: 6px;
+        border-radius: 3px;
+        background: #e0e0e0;
+        outline: none;
+        -webkit-appearance: none;
+        appearance: none;
+        cursor: pointer;
+      }
+      .speed-slider::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        cursor: pointer;
+        box-shadow: 0 2px 6px rgba(102, 126, 234, 0.3);
+        transition: all 0.3s ease;
+      }
+      .speed-slider::-webkit-slider-thumb:hover {
+        transform: scale(1.1);
+        box-shadow: 0 4px 12px rgba(102, 126, 234, 0.4);
+      }
+      .speed-slider::-moz-range-thumb {
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+        cursor: pointer;
+        border: none;
+        box-shadow: 0 2px 6px rgba(102, 126, 234, 0.3);
+      }
+      .speed-labels {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 5px;
+      }
+      .speed-label-text {
+        font-size: 12px;
+        color: #666;
+        font-weight: 500;
+      }
+      .speed-value {
+        text-align: center;
+        font-weight: 600;
+        color: #667eea;
+        font-size: 14px;
+        margin-top: 5px;
+      }
       .reset-btn {
         background: linear-gradient(
           135deg,
@@ -514,6 +585,19 @@
         <button id="stopAll" class="stop-btn" disabled>
           Stop Scrolling & Analysis
         </button>
+      </div>
+      
+      <!-- Scroll Speed Control -->
+      <div class="speed-control">
+        <label for="scrollSpeed" class="speed-label">Scroll Speed:</label>
+        <div class="speed-container">
+          <input type="range" id="scrollSpeed" min="1" max="10" value="1" class="speed-slider">
+          <div class="speed-labels">
+            <span class="speed-label-text">Slow</span>
+            <span class="speed-label-text">Fast</span>
+          </div>
+        </div>
+        <div class="speed-value" id="speedValue">1.0x</div>
       </div>
 
       <!-- Collapsible Filters Section (Hidden - now in settings modal) -->
